[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/FireballSentry.gd" type="Script" id=1]
[ext_resource path="res://Audio/Fireball.wav" type="AudioStream" id=2]

[node name="FireballSentryL" type="Node2D"]
script = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]

[node name="FireTime" type="Timer" parent="."]

[node name="FireSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="timeout" from="FireTime" to="." method="_on_FireTime_timeout"]
